--- a/public/index.html
+++ b/public/index.html
@@ -369,6 +369,10 @@
                                 <i class="fas fa-map-marker-alt" style="font-size: 1.5rem; color: #8A2BE2;"></i>
                                 <span style="color: rgba(255,255,255,0.8);">Puttalam, Sri Lanka </span>
                             </div>
+                            <a href="THILINA_SUPUNSARA CV .pdf" target="_blank" rel="noopener noreferrer">
+                            <button class="tech-button">View My CV</button>
+                            </a>
+                            
                         </div>
                     </div>
                     <div>
