--- a/public/index.html
+++ b/public/index.html
@@ -342,6 +342,30 @@
                     </br>...and so on 
                     </p>
                 </div>
+                <div class="card">
+                    <div style="height: 180px; background: linear-gradient(45deg, #40E0D0, #8A2BE2); border-radius: 8px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center;">
+                        <img src="portfolio/gpacal.png" alt="Shop" style="max-height: 100%; max-width: 100%; ">
+                    </div>
+                    <h3>BIT GPA_Calculator (HTML, CSS, JavaScript)</h3>
+                    <a href="https://gpacalculator-thilina.web.app/" 
+                        target="_blank" 
+                        rel="noopener noreferrer"
+                        style="display: inline-block; 
+                                margin-top: 10px; 
+                                padding: 10px 20px; 
+                                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); 
+                                color: #ffffff; 
+                                border-radius: 8px; 
+                                text-decoration: none; 
+                                font-weight: 600;
+                                font-size: 14px;
+                                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+                                transition: all 0.3s ease;
+                                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;">
+                        🔗 View Project
+                        </a>
+                    <p>I developed a responsive GPA Calculator web application that allows BIT students to easily compute their Grade Point Average based on credit hours and letter grades. The calculator supports dynamic subject entry (add/remove subjects), real-time GPA computation with weighted credits, and grade point mapping aligned with academic benchmarks (A+, A, A-, etc.).</p>
+                </div>
             </div>
         </div>
     </section>
