new project chatapp

--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
                 <div style="background: rgba(30, 30, 30, 0.7); border-radius: 10px; padding: 25px; border: 1px solid rgba(64, 224, 208, 0.1);">
                     <h3 style="font-size: 1.4rem; margin-bottom: 20px; color: #FF6B6B;">My Journey</h3>
                     <p style="color: rgba(255,255,255,0.7); line-height: 1.7; margin-bottom: 15px;">
-                      I'm a third-year Bachelor of Information Technology undergraduate at the University of Moratuwa, passionate about building clean, responsive, and user-focused digital experiences. As a dedicated Software Developer, I specialize in web development and design, with hands-on experience in multiple frameworks and programming languages. I’m driven by a commitment to delivering high-quality, efficient, and innovative solutions.
+                      I'm a Bachelor of Information Technology graduate from the University of Moratuwa, passionate about building clean, responsive, and user-focused digital experiences. As a dedicated Software Developer, I specialize in web development and design, with hands-on experience in multiple frameworks and programming languages. I’m driven by a commitment to delivering high-quality, efficient, and innovative solutions.
                     </p>
                     
                 </div>
@@ -365,6 +365,71 @@
                         🔗 View Project
                         </a>
                     <p>I developed a responsive GPA Calculator web application that allows BIT students to easily compute their Grade Point Average based on credit hours and letter grades. The calculator supports dynamic subject entry (add/remove subjects), real-time GPA computation with weighted credits, and grade point mapping aligned with academic benchmarks (A+, A, A-, etc.).</p>
+                </div>
+                <div class="card">
+                    <div style="height: 180px; background: linear-gradient(45deg, #40E0D0, #8A2BE2); border-radius: 8px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center;">
+                        <img src="portfolio/chat.jpg" alt="Shop" style="max-height: 100%; max-width: 100%; ">
+                    </div>
+                    <h3> Real-Time Chat App with Laravel, Livewire, and Reverb</h3>
+                    <a href="https://real-time-chatapp-9vo3.onrender.com" 
+                        target="_blank" 
+                        rel="noopener noreferrer"
+                        style="display: inline-block; 
+                                margin-top: 10px; 
+                                padding: 10px 20px; 
+                                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); 
+                                color: #ffffff; 
+                                border-radius: 8px; 
+                                text-decoration: none; 
+                                font-weight: 600;
+                                font-size: 14px;
+                                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+                                transition: all 0.3s ease;
+                                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;">
+                        🔗 View Project
+                        </a>
+                    <p> Building modern, real-time communication platforms. Architected
+                        and developed a Full-Stack Real-Time Chat Application using
+                        Laravel and Livewire, featuring instant messaging, "is typing"
+                        indicators, read receipts, and a complete friend/block management
+                        system to deliver a seamless and engaging user experience.</p>
+                        <hr>
+                        <p>
+                        user - (test@example.com , password)<br>
+                        user - (thilina@example.org , password)</p>
+                </div>
+                <div class="card">
+                    <div style="height: 180px; background: linear-gradient(45deg, #40E0D0, #8A2BE2); border-radius: 8px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center;">
+                        <img src="portfolio/check.jpg" alt="Shop" style="max-height: 100%; max-width: 100%; ">
+                    </div>
+                    <h3>Housekeeping Management System with Laravel</h3>
+                    <a href="https://checklist-system-8m6j.onrender.com" 
+                        target="_blank" 
+                        rel="noopener noreferrer"
+                        style="display: inline-block; 
+                                margin-top: 10px; 
+                                padding: 10px 20px; 
+                                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); 
+                                color: #ffffff; 
+                                border-radius: 8px; 
+                                text-decoration: none; 
+                                font-weight: 600;
+                                font-size: 14px;
+                                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+                                transition: all 0.3s ease;
+                                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;">
+                        🔗 View Project
+                        </a>
+                    <p> Streamlining operations for the property management industry.
+                        Designed and deployed a Full-Stack Housekeeping Management
+                        System using Laravel, MySQL, and Docker, featuring role-based
+                        dashboards, interactive mobile checklists, and server-side GPS
+                        verification to ensure quality control and provide real-time
+                        oversight for property cleaning operations </p> <hr>
+                        <p>
+                        admin - (admin@example.com , password)<br>
+                        owner - (owner@example.com , password)<br>
+                        housekeeper - (housekeeper@example.com , password)</p>
                 </div>
             </div>
         </div>
