--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="mylogo.png">
     <title>Thilina Portfolio</title>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script>
@@ -318,6 +319,23 @@
                         <img src="portfolio/bgremove.jpg" alt="Shop" style="max-height: 100%; max-width: 100%; ">
                     </div>
                     <h3>Background Removal Tool (Laravel + API)</h3>
+                    <a href="https://background-removal-tool-laravel-api.onrender.com" 
+                        target="_blank" 
+                        rel="noopener noreferrer"
+                        style="display: inline-block; 
+                                margin-top: 10px; 
+                                padding: 10px 20px; 
+                                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); 
+                                color: #ffffff; 
+                                border-radius: 8px; 
+                                text-decoration: none; 
+                                font-weight: 600;
+                                font-size: 14px;
+                                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+                                transition: all 0.3s ease;
+                                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;">
+                        🔗 View Project
+                        </a>
                     <p>This tool is built with Laravel and integrates a third-party API to automatically remove backgrounds from images. Users can upload any image, and the system processes it in real-time, returning a clean, transparent-background version. It’s ideal for e-commerce, design, and content creation needs.</p>
                 </div>
                 <div class="card">
@@ -332,6 +350,23 @@
                         <img src="portfolio/builb.jpg" alt="Shop" style="max-height: 100%; max-width: 100%; ">
                     </div>
                     <h3>Hand Gesture-Controlled Light System</h3>
+                    <a href="https://hand-gesture-controlled-light-system.onrender.com" 
+                        target="_blank" 
+                        rel="noopener noreferrer"
+                        style="display: inline-block; 
+                                margin-top: 10px; 
+                                padding: 10px 20px; 
+                                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); 
+                                color: #ffffff; 
+                                border-radius: 8px; 
+                                text-decoration: none; 
+                                font-weight: 600;
+                                font-size: 14px;
+                                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+                                transition: all 0.3s ease;
+                                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;">
+                        🔗 View Project
+                        </a>
                     <p>This interactive system uses real-time hand tracking via a webcam to control lights with simple finger gestures. Users can raise their fingers to activate corresponding lights:
                     </br>✋ 1 finger = Light 1
 
@@ -461,7 +496,7 @@
                                 <i class="fas fa-map-marker-alt"></i>
                                 <span>Puttalam, Sri Lanka</span>
                             </div>
-                            <a href="THILINA_SUPUNSARA CV .pdf" target="_blank" rel="noopener noreferrer">
+                            <a href="THILINA_SUPUNSARA CV.pdf" target="_blank" rel="noopener noreferrer">
                                 <button class="tech-button">View My CV</button>
                                 </a>
                         </div>
